Commit for Pk-1774

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantLogisticsFeeMangements/LogisticsFeeManagement.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantLogisticsFeeMangements/LogisticsFeeManagement.razor
@@ -512,6 +512,7 @@
                 <Row Margin="Margin.Is3.FromTop">
                     <Column>
                         <Check TValue="bool" @bind-Checked="AutoDeduct">@L["AutoDeductFromTenantWallets"]</Check>
+                        <Span Margin="Margin.Is2.FromTop"></Span>
                         <Check TValue="bool" @bind-Checked="SendNotifications" Margin="Margin.Is2.FromTop">@L["SendEmailNotifications"]</Check>
                     </Column>
                 </Row>
