--- a/src/Kooco.Pikachu.Blazor/wwwroot/css/inbox.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/css/inbox.css
@@ -126,20 +126,32 @@
     margin-bottom: 20px;
 }
 
-.notification-actions {
+.inbox-actions {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.notification-filter-actions .pk-btn:not(:last-child) {
+.inbox-filter-actions .pk-btn:not(:last-child) {
     margin-right: 10px;
 }
 
-.notification-actions-right .pk-btn:not(:last-child) {
+.inbox-actions-right .pk-btn:not(:last-child) {
     margin-right: 10px;
 }
 
 .b-table {
     border: 1px solid #e9ecef;
+}
+
+.type-icon {
+    font-size: 1.75rem;
+}
+
+.notification-row td:first-child {
+    border-left: 5px solid transparent;
+}
+
+.notification-unread td:first-child {
+    border-left-color: var(--primary-color);
 }
