--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantLogisticsFeeMangements/LogisticsFeeOrderRecord.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantLogisticsFeeMangements/LogisticsFeeOrderRecord.razor
@@ -422,17 +422,15 @@
                   ShowPager="true"
                   PageSize="PageSize"
                   Responsive="true"
-                  SelectionMode="DataGridSelectionMode.Multiple"
+                
+                   SelectedRowChanged="RowSelectableHandler"
                   @bind-SelectedRows="@SelectedRows">
             <DataGridColumns>
-                <DataGridMultiSelectColumn TItem="TenantLogisticsFeeRecordDto" Width="50px">
-                    <DisplayTemplate>
-                        @if (context.DeductionStatus == WalletDeductionStatus.Failed)
-                        {
-                            <!-- Show checkbox only for failed records -->
-                        }
-                    </DisplayTemplate>
-                </DataGridMultiSelectColumn>
+                <DataGridColumn Caption="@L["Select"]" Width="30px">
+                                    <DisplayTemplate>
+                                        <InputCheckbox class="form-check-input"  @bind-Value="@context.IsSelected"></InputCheckbox>
+                                    </DisplayTemplate>
+                                </DataGridColumn>
                 
                 <DataGridColumn TItem="TenantLogisticsFeeRecordDto" 
                                Field="@nameof(TenantLogisticsFeeRecordDto.OrderNumber)" 
@@ -510,8 +508,12 @@
                                     Size="Size.Small" 
                                     @onclick="() => RetryIndividualRecord(context.Id)"
                                     Loading="@IsRetryingRecord(context.Id)">
+                                    <div>
                                 <Icon Name="IconName.Redo" />
+                                <div>
                                 @L["TryAgain"]
+                                </div>
+                                </div>
                             </Button>
                         }
                         else if (context.DeductionStatus == WalletDeductionStatus.Completed)
@@ -519,8 +521,12 @@
                             <Button Color="Color.Success" 
                                     Size="Size.Small" 
                                     Disabled>
+                                      <div>
                                 <Icon Name="IconName.Check" />
+                                  <div>
                                 @L["Successful"]
+                                </div>
+                                </div>
                             </Button>
                         }
                         else
