--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantLogisticsFeeMangements/LogisticsFileImportDetail.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantLogisticsFeeMangements/LogisticsFileImportDetail.razor
@@ -526,7 +526,7 @@
                                                 <strong>@L["DragDropFileHere"]</strong>
                                             </div>
                                             <div class="text-muted">@L["OrClickToBrowse"]</div>
-                                            <div class="text-muted small mt-2">
+                                            <div class="text-muted small mt-2" style="min-width: 270px !important;">
                                                 @L["SupportedFormats"]: CSV, XLSX<br/>
                                                 @L["RequiredColumns"]: @L["OrderNumber"], @L["LogisticFee"]
                                             </div>
