--- a/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/Inbox.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/Inbox.razor
@@ -21,19 +21,36 @@
         </TableRow>
     </TableHeader>
     <TableBody>
-        @foreach (var notification in Notifications ?? [])
+        @if (Notifications?.Count > 0)
         {
-            <TableRow Class="@RowClass(notification)">
-                <TableRowCell>
-                    <NotificationType Notification="notification" />
+            @foreach (var notification in Notifications)
+            {
+                <TableRow Class="@RowClass(notification)">
+                    <TableRowCell>
+                        <NotificationType Notification="notification" />
+                    </TableRowCell>
+                    <TableRowCell>
+                        <h5 class="notification-title">@L.WithParams(notification.Title, notification.TitleParams)</h5>
+                        <p class="notification-message">@L.WithParams(notification.Message, notification.MessageParams)</p>
+                    </TableRowCell>
+                    <TableRowCell>
+                        <NotificationStatus IsRead="notification.IsRead" />
+                    </TableRowCell>
+                    <TableRowCell>
+                        <RelativeTime Time="@notification.NotificationTimeUtc" />
+                    </TableRowCell>
+                    <TableRowCell Style="width: 50px;">
+                        <NotificationAction Notification="notification" OnView="OnView" />
+                    </TableRowCell>
+                </TableRow>
+            }
+        }
+        else if (!Loading)
+        {
+            <TableRow>
+                <TableRowCell ColumnSpan="5" class="text-center">
+                    <p>@L["No notifications found."]</p>
                 </TableRowCell>
-                <TableRowCell>
-                    <h5>@L.WithParams(notification.Title, notification.TitleParams)</h5>
-                    <p>@L.WithParams(notification.Message, notification.MessageParams)</p>
-                </TableRowCell>
-                <TableRowCell>@(notification.IsRead ? "Read" : "Unread")</TableRowCell>
-                <TableRowCell>@notification.CreationTime</TableRowCell>
-                <TableRowCell></TableRowCell>
             </TableRow>
         }
         @if (Loading)
