--- a/src/Kooco.Pikachu.Blazor/Pages/Components/RelativeTime.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Components/RelativeTime.razor
@@ -1,9 +1,9 @@
 ﻿@using Kooco.Pikachu.Services
 @inject DateTimeService DateTimeService
 
-<span>@DateTimeService.Humanize(Time, IsUtc)</span>
+<span>@DateTimeService.Humanize(Time, Utc)</span>
 
 @code {
     [Parameter] public DateTime Time { get; set; }
-    [Parameter] public bool IsUtc { get; set; } = true;
+    [Parameter] public bool Utc { get; set; } = true;
 }
