--- a/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/NotificationTypeColumn.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/NotificationTypeColumn.razor
@@ -11,7 +11,8 @@
     private string Icon => Notification.Type switch
     {
         NotificationType.Order => "📦",
-        NotificationType.Payment => "💳",
+        NotificationType.BankTransfer => "💳",
+        NotificationType.Payment => "💰",
         _ => ""
     };
 }
